--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -46,6 +46,14 @@ textarea {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.cm-property {
+  color: #d19a66 !important;
+}
+
+.cm-keyword {
+  color: #c678dd !important;
+}
+
 @media only screen and (max-width: 600px) {
   iframe {
     width: 100% !important;
